broken styles repair

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -12,7 +12,7 @@
   background-size: 100% 250px;
 }
 .block{
-  margin-left:300px;
+  margin-left:250px;
   text-align:center;
 }
 .articlesTable{
@@ -96,10 +96,10 @@
   background-image: url("1.jpg");
   background-repeat: no-repeat;
   background-position: bottom ;
-  background-size:900px 580px;
+  background-size:850px 580px;
 }
 .editSec{
-  margin:100px 0 0 560px;
+  margin:100px 0 0 540px;
 }
 #backBtn{
   margin:5px 0 10px 95px;
