--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -51,8 +51,8 @@ body{
 .profileSection h1{
   margin-top: 50px;
 }
-.ui.card{
-  margin:20px auto 20px auto;
+#uiCard{
+  margin:20px 0 20px 540px;
 }
 
 //new user page
@@ -65,7 +65,7 @@ body{
 }
 .newSubContainer{
     position: absolute;
-    left: 580px;
+    left: 550px;
     top: 100px;
     z-index: 1;
 }
